tests/baselines/reference/noImplicitAnyMissingSetAccessor(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
noImplicitAnyMissingSetAccessor.ts(3,25): error TS7033: Property 'message' implicitly has type 'any', because its get accessor lacks a return type annotation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== noImplicitAnyMissingSetAccessor.ts (1 errors) ====
    abstract class Parent
    {
        public abstract get message();
                            ~~~~~~~
!!! error TS7033: Property 'message' implicitly has type 'any', because its get accessor lacks a return type annotation.
    }
    
    class Child extends Parent {
        public get message() {
            return "";
        }
    }